--- a/Informe.ipynb
+++ b/Informe.ipynb
@@ -211,27 +211,11 @@
     "\n",
     "| file\t                                | num_seq\t| total_len\t| gc_percent |\n",
     "| --------------------------------------|-----------|-----------|------------|\n",
-    "| GCA_000007385.1_ASM738v1_genomic.fna\t| 1\t        |  4941439\t| 63.69     \n",
-    "| GCA_000008525.1_ASM852v1_genomic.fna\t| 1\t        |  1667867\t| 38.87\n",
-    "| GCA_000013525.1_ASM1352v1_genomic.fna\t| 1\t        |  1860355\t| 38.73\n",
-    "| GCA_000014305.1_ASM1430v1_genomic.fna\t| 1\t        |  2096309\t| 41.11\n",
-    "| GCA_000014325.1_ASM1432v1_genomic.fna\t| 1\t        |  2095698\t| 41.11"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b02068d8",
-   "metadata": {},
-   "source": [
-    "### Graficos (plots)\n",
-    "\n",
-    "![Contenido_de_GC%](results/plots/results/plots/gc_content.png)\n",
-    "\n",
-    "![Número_de_sequencias](results/plots/results/plots/num_sequences.png)\n",
-    "\n",
-    "![Cuenta_de_Regex](results/plots/results/plots/regex_counts.png)\n",
-    "\n",
-    "![Largo_total](results/plots/results/plots/total_length.png)"
+    "| GCA_000007385.1_ASM738v1_genomic.fna\t| 1\t        |  4941439\t| 63.69      |     \n",
+    "| GCA_000008525.1_ASM852v1_genomic.fna\t| 1\t        |  1667867\t| 38.87      |\n",
+    "| GCA_000013525.1_ASM1352v1_genomic.fna\t| 1\t        |  1860355\t| 38.73      |\n",
+    "| GCA_000014305.1_ASM1430v1_genomic.fna\t| 1\t        |  2096309\t| 41.11      |\n",
+    "| GCA_000014325.1_ASM1432v1_genomic.fna\t| 1\t        |  2095698\t| 41.11      |"
    ]
   },
   {
@@ -243,24 +227,32 @@
     "\n",
     "### gc_content.png\n",
     "\n",
+    "![Contenido_de_GC%](results/plots/results/plots/gc_content.png)\n",
+    "\n",
     "Este gráfico de Contenido GC (%) resume la proporción de nucleótidos G + C en cada uno de tus cinco ensamblajes:\n",
     "\n",
     "1.\tGCA_000007385.1_ASM738v1 (~63.7 % GC)\n",
-    "\t-\tSe sitúa muy por encima de los demás, con un marcado sesgo hacia GC.\n",
+    "-\tSe sitúa muy por encima de los demás, con un marcado sesgo hacia GC.\n",
     "2.\tLos otros cuatro ensambles (~38.4 %–41.6 % GC)\n",
-    "\t-\tGCA_000013525.1_ASM1352v1 (~38.4 %) es el más rico en AT, con el GC más bajo.\n",
-    "\t-\tGCA_000008525.1_ASM852v1 (~40.9 %) y GCA_000014305.1_ASM1430v1 & GCA_000014325.1_ASM1432v1 (~41.6 %) caen todos dentro de un rango estrecho (39–42 %).\n",
+    "-\tGCA_000013525.1_ASM1352v1 (~38.4 %) es el más rico en AT, con el GC más bajo.\n",
+    "-\tGCA_000008525.1_ASM852v1 (~40.9 %) y GCA_000014305.1_ASM1430v1 & GCA_000014325.1_ASM1432v1 (~41.6 %) caen todos dentro de un rango estrecho (39–42 %).\n",
     "\n",
     "\n",
     "### num_sequences.png\n",
+    "\n",
+    "![Número_de_sequencias](results/plots/results/plots/num_sequences.png)\n",
     "\n",
     "El gráfico de Número de Secuencias te está confirmando que cada uno de los cinco archivos FASTA contiene exactamente 1 secuencia.\n",
     "\n",
     "### regex_counts.png\n",
     "\n",
+    "![Cuenta_de_Regex](results/plots/results/plots/regex_counts.png)\n",
+    "\n",
     "Este gráfico muestra el conteo de nucleótidos “GC” (k-mer de tamaño 2) en cada uno de los ensamblajes.\n",
     "\n",
     "### total_lenght.png\n",
+    "\n",
+    "![Largo_total](results/plots/results/plots/total_length.png)\n",
     "\n",
     "Este gráfico muestra la longitud total (en pares de bases) de cada uno de tus cinco genomas.\n",
     "\n",
