--- a/Informe.ipynb
+++ b/Informe.ipynb
@@ -79,7 +79,7 @@
    "id": "8c8f1564",
    "metadata": {},
    "source": [
-    "- Descripción del hardware:\n",
+    "## Descripción del hardware:\n",
     "\n",
     "Este workflow fue desarrollado en un Apple Macbook Pro M2 Pro (ARM) de 16 GB de Ram y el hardware usado donde se encuentran los archivos fueron disponibilizados por el profesor y se e cuentran en el servidor faraday de la Universidad Tecnológica Metropolitana. \n",
     "\n",
@@ -202,9 +202,9 @@
     "### Resultado summary.txt\n",
     "\n",
     "- file : Nombre del archivo FASTA analizado. Cada uno contiene el ensamblaje completo de un genoma.\n",
-    "- num_seq : Número de secuencias o contigs en el archivo. Aquí vale 1 para todos, porque cada FASTA es un único contig o cromosoma completo.\n",
+    "- num_seq : Número de secuencias. Aquí vale 1 para todos, porque cada FASTA es un único cromosoma completo.\n",
     "- total_len : Longitud total en pares de bases (bp). Equivale a la suma de todas las longitudes de secuencia en el fichero FASTA. Por ejemplo, 4941439 significa que el ensamblaje mide aproximadamente 4.94 Mb.\n",
-    "- gc_percent : Porcentaje de nucleótidos G + C sobre el total de pares de bases. Por ejemplo, el primer genoma tiene un 63.69 % de GC, mientras que los otros rondan el 38–41 %.\n",
+    "- gc_percent : Porcentaje de nucleótidos \"G\" + \"C\" sobre el total de pares de bases. Por ejemplo, el primer genoma tiene un 63.69 % de GC, mientras que los otros rondan el 38–41 %.\n",
     "\n",
     "\n",
     "\n",
@@ -229,7 +229,7 @@
     "\n",
     "![Contenido_de_GC%](results/plots/results/plots/gc_content.png)\n",
     "\n",
-    "Este gráfico de Contenido GC (%) resume la proporción de nucleótidos G + C en cada uno de tus cinco ensamblajes:\n",
+    "Este gráfico de Contenido GC (%) resume la proporción de nucleótidos \"G\" + \"C\" en cada uno de los cinco ensamblajes:\n",
     "\n",
     "1.\tGCA_000007385.1_ASM738v1 (~63.7 % GC)\n",
     "-\tSe sitúa muy por encima de los demás, con un marcado sesgo hacia GC.\n",
@@ -242,7 +242,7 @@
     "\n",
     "![Número_de_sequencias](results/plots/results/plots/num_sequences.png)\n",
     "\n",
-    "El gráfico de Número de Secuencias te está confirmando que cada uno de los cinco archivos FASTA contiene exactamente 1 secuencia.\n",
+    "El gráfico de Número de Secuencias está confirmando que cada uno de los cinco archivos FASTA contiene exactamente 1 secuencia.\n",
     "\n",
     "### regex_counts.png\n",
     "\n",
@@ -254,7 +254,7 @@
     "\n",
     "![Largo_total](results/plots/results/plots/total_length.png)\n",
     "\n",
-    "Este gráfico muestra la longitud total (en pares de bases) de cada uno de tus cinco genomas.\n",
+    "Este gráfico muestra la longitud total (en pares de bases) de cada uno de los cinco genomas.\n",
     "\n",
     "-\tEl primer genoma (ASM738v1) duplica en tamaño al siguiente más grande y es casi 3× mayor que los más pequeños.\n",
     "-\tEsto sugiere que pertenece a una especie o cepa con un genoma significativamente más extenso.\n",
